testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail13.stderr

overloadedrecfldsfail13.hs:10:5: error:
    Ambiguous occurrence ‘x’
    It could refer to
       either the field ‘x’ of record ‘T’,
              defined at overloadedrecfldsfail13.hs:7:16
           or the field ‘x’ of record ‘S’,
              defined at overloadedrecfldsfail13.hs:6:16

overloadedrecfldsfail13.hs:12:5: error:
    Ambiguous occurrence ‘x’
    It could refer to
       either the field ‘x’ of record ‘T’,
              defined at overloadedrecfldsfail13.hs:7:16
           or the field ‘x’ of record ‘S’,
              defined at overloadedrecfldsfail13.hs:6:16

overloadedrecfldsfail13.hs:15:5: error:
    Ambiguous occurrence ‘x’
    It could refer to
       either the field ‘x’ of record ‘T’,
              defined at overloadedrecfldsfail13.hs:7:16
           or the field ‘x’ of record ‘S’,
              defined at overloadedrecfldsfail13.hs:6:16

overloadedrecfldsfail13.hs:18:5: error:
    Ambiguous occurrence ‘x’
    It could refer to
       either the field ‘x’ of record ‘T’,
              defined at overloadedrecfldsfail13.hs:7:16
           or the field ‘x’ of record ‘S’,
              defined at overloadedrecfldsfail13.hs:6:16
